--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -35,6 +35,7 @@
       "\u001b[33mWARNING: The directory '/home/jovyan/.cache/pip' or its parent directory is not owned or is not writable by the current user. The cache has been disabled. Check the permissions and owner of that directory. If executing pip with sudo, you should use sudo's -H flag.\u001b[0m\u001b[33m\n",
       "\u001b[0mRequirement already satisfied: streamlit in /opt/conda/lib/python3.11/site-packages (1.44.1)\n",
       "Requirement already satisfied: matplotlib in /opt/conda/lib/python3.11/site-packages (3.10.1)\n",
+      "Requirement already satisfied: gradio in /opt/conda/lib/python3.11/site-packages (5.27.0)\n",
       "Requirement already satisfied: transformers[torch] in /opt/conda/lib/python3.11/site-packages (4.51.3)\n",
       "Requirement already satisfied: filelock in /opt/conda/lib/python3.11/site-packages (from transformers[torch]) (3.18.0)\n",
       "Requirement already satisfied: huggingface-hub<1.0,>=0.30.0 in /opt/conda/lib/python3.11/site-packages (from transformers[torch]) (0.30.2)\n",
@@ -69,20 +70,46 @@
       "Requirement already satisfied: kiwisolver>=1.3.1 in /opt/conda/lib/python3.11/site-packages (from matplotlib) (1.4.8)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in /opt/conda/lib/python3.11/site-packages (from matplotlib) (3.2.3)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in /opt/conda/lib/python3.11/site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Requirement already satisfied: aiofiles<25.0,>=22.0 in /opt/conda/lib/python3.11/site-packages (from gradio) (24.1.0)\n",
+      "Requirement already satisfied: anyio<5.0,>=3.0 in /opt/conda/lib/python3.11/site-packages (from gradio) (4.0.0)\n",
+      "Requirement already satisfied: fastapi<1.0,>=0.115.2 in /opt/conda/lib/python3.11/site-packages (from gradio) (0.115.12)\n",
+      "Requirement already satisfied: ffmpy in /opt/conda/lib/python3.11/site-packages (from gradio) (0.5.0)\n",
+      "Requirement already satisfied: gradio-client==1.9.0 in /opt/conda/lib/python3.11/site-packages (from gradio) (1.9.0)\n",
+      "Requirement already satisfied: groovy~=0.1 in /opt/conda/lib/python3.11/site-packages (from gradio) (0.1.2)\n",
+      "Requirement already satisfied: httpx>=0.24.1 in /opt/conda/lib/python3.11/site-packages (from gradio) (0.28.1)\n",
+      "Requirement already satisfied: jinja2<4.0 in /opt/conda/lib/python3.11/site-packages (from gradio) (3.1.2)\n",
+      "Requirement already satisfied: markupsafe<4.0,>=2.0 in /opt/conda/lib/python3.11/site-packages (from gradio) (2.1.3)\n",
+      "Requirement already satisfied: orjson~=3.0 in /opt/conda/lib/python3.11/site-packages (from gradio) (3.10.16)\n",
+      "Requirement already satisfied: pydantic<2.12,>=2.0 in /opt/conda/lib/python3.11/site-packages (from gradio) (2.11.3)\n",
+      "Requirement already satisfied: pydub in /opt/conda/lib/python3.11/site-packages (from gradio) (0.25.1)\n",
+      "Requirement already satisfied: python-multipart>=0.0.18 in /opt/conda/lib/python3.11/site-packages (from gradio) (0.0.20)\n",
+      "Requirement already satisfied: ruff>=0.9.3 in /opt/conda/lib/python3.11/site-packages (from gradio) (0.11.7)\n",
+      "Requirement already satisfied: safehttpx<0.2.0,>=0.1.6 in /opt/conda/lib/python3.11/site-packages (from gradio) (0.1.6)\n",
+      "Requirement already satisfied: semantic-version~=2.0 in /opt/conda/lib/python3.11/site-packages (from gradio) (2.10.0)\n",
+      "Requirement already satisfied: starlette<1.0,>=0.40.0 in /opt/conda/lib/python3.11/site-packages (from gradio) (0.46.2)\n",
+      "Requirement already satisfied: tomlkit<0.14.0,>=0.12.0 in /opt/conda/lib/python3.11/site-packages (from gradio) (0.13.2)\n",
+      "Requirement already satisfied: typer<1.0,>=0.12 in /opt/conda/lib/python3.11/site-packages (from gradio) (0.15.2)\n",
+      "Requirement already satisfied: uvicorn>=0.14.0 in /opt/conda/lib/python3.11/site-packages (from gradio) (0.34.2)\n",
+      "Requirement already satisfied: fsspec in /opt/conda/lib/python3.11/site-packages (from gradio-client==1.9.0->gradio) (2025.3.2)\n",
+      "Requirement already satisfied: websockets<16.0,>=10.0 in /opt/conda/lib/python3.11/site-packages (from gradio-client==1.9.0->gradio) (15.0.1)\n",
       "Requirement already satisfied: psutil in /opt/conda/lib/python3.11/site-packages (from accelerate>=0.26.0->transformers[torch]) (5.9.5)\n",
-      "Requirement already satisfied: jinja2 in /opt/conda/lib/python3.11/site-packages (from altair<6,>=4.0->streamlit) (3.1.2)\n",
       "Requirement already satisfied: jsonschema>=3.0 in /opt/conda/lib/python3.11/site-packages (from altair<6,>=4.0->streamlit) (4.19.1)\n",
       "Requirement already satisfied: narwhals>=1.14.2 in /opt/conda/lib/python3.11/site-packages (from altair<6,>=4.0->streamlit) (1.36.0)\n",
+      "Requirement already satisfied: idna>=2.8 in /opt/conda/lib/python3.11/site-packages (from anyio<5.0,>=3.0->gradio) (3.10)\n",
+      "Requirement already satisfied: sniffio>=1.1 in /opt/conda/lib/python3.11/site-packages (from anyio<5.0,>=3.0->gradio) (1.3.0)\n",
       "Requirement already satisfied: gitdb<5,>=4.0.1 in /opt/conda/lib/python3.11/site-packages (from gitpython!=3.1.19,<4,>=3.0.7->streamlit) (4.0.12)\n",
-      "Requirement already satisfied: fsspec>=2023.5.0 in /opt/conda/lib/python3.11/site-packages (from huggingface-hub<1.0,>=0.30.0->transformers[torch]) (2025.3.2)\n",
+      "Requirement already satisfied: certifi in /opt/conda/lib/python3.11/site-packages (from httpx>=0.24.1->gradio) (2025.4.26)\n",
+      "Requirement already satisfied: httpcore==1.* in /opt/conda/lib/python3.11/site-packages (from httpx>=0.24.1->gradio) (1.0.9)\n",
+      "Requirement already satisfied: h11>=0.16 in /opt/conda/lib/python3.11/site-packages (from httpcore==1.*->httpx>=0.24.1->gradio) (0.16.0)\n",
       "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.11/site-packages (from pandas<3,>=1.4.0->streamlit) (2025.2)\n",
       "Requirement already satisfied: tzdata>=2022.7 in /opt/conda/lib/python3.11/site-packages (from pandas<3,>=1.4.0->streamlit) (2025.2)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /opt/conda/lib/python3.11/site-packages (from pydantic<2.12,>=2.0->gradio) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.33.1 in /opt/conda/lib/python3.11/site-packages (from pydantic<2.12,>=2.0->gradio) (2.33.1)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.0 in /opt/conda/lib/python3.11/site-packages (from pydantic<2.12,>=2.0->gradio) (0.4.0)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.11/site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/conda/lib/python3.11/site-packages (from requests->transformers[torch]) (3.4.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.11/site-packages (from requests->transformers[torch]) (3.10)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/conda/lib/python3.11/site-packages (from requests->transformers[torch]) (2.4.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.11/site-packages (from requests->transformers[torch]) (2025.4.26)\n",
-      "Requirement already satisfied: sympy>=1.13.3 in /opt/conda/lib/python3.11/site-packages (from torch>=2.0->transformers[torch]) (1.14.0)\n",
+      "Requirement already satisfied: sympy>=1.13.3 in /opt/conda/lib/python3.11/site-packages (from torch>=2.0->transformers[torch]) (1.13.3)\n",
       "Requirement already satisfied: networkx in /opt/conda/lib/python3.11/site-packages (from torch>=2.0->transformers[torch]) (3.4.2)\n",
       "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.6.77 in /opt/conda/lib/python3.11/site-packages (from torch>=2.0->transformers[torch]) (12.6.77)\n",
       "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.6.77 in /opt/conda/lib/python3.11/site-packages (from torch>=2.0->transformers[torch]) (12.6.77)\n",
@@ -100,13 +127,17 @@
       "Requirement already satisfied: nvidia-cufile-cu12==1.11.1.6 in /opt/conda/lib/python3.11/site-packages (from torch>=2.0->transformers[torch]) (1.11.1.6)\n",
       "Requirement already satisfied: triton==3.3.0 in /opt/conda/lib/python3.11/site-packages (from torch>=2.0->transformers[torch]) (3.3.0)\n",
       "Requirement already satisfied: setuptools>=40.8.0 in /opt/conda/lib/python3.11/site-packages (from triton==3.3.0->torch>=2.0->transformers[torch]) (68.2.2)\n",
+      "Requirement already satisfied: shellingham>=1.3.0 in /opt/conda/lib/python3.11/site-packages (from typer<1.0,>=0.12->gradio) (1.5.4)\n",
+      "Requirement already satisfied: rich>=10.11.0 in /opt/conda/lib/python3.11/site-packages (from typer<1.0,>=0.12->gradio) (14.0.0)\n",
       "Requirement already satisfied: smmap<6,>=3.0.1 in /opt/conda/lib/python3.11/site-packages (from gitdb<5,>=4.0.1->gitpython!=3.1.19,<4,>=3.0.7->streamlit) (5.0.2)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /opt/conda/lib/python3.11/site-packages (from jinja2->altair<6,>=4.0->streamlit) (2.1.3)\n",
       "Requirement already satisfied: attrs>=22.2.0 in /opt/conda/lib/python3.11/site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (23.1.0)\n",
       "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /opt/conda/lib/python3.11/site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (2023.7.1)\n",
       "Requirement already satisfied: referencing>=0.28.4 in /opt/conda/lib/python3.11/site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (0.30.2)\n",
       "Requirement already satisfied: rpds-py>=0.7.1 in /opt/conda/lib/python3.11/site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (0.10.6)\n",
+      "Requirement already satisfied: markdown-it-py>=2.2.0 in /opt/conda/lib/python3.11/site-packages (from rich>=10.11.0->typer<1.0,>=0.12->gradio) (3.0.0)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /opt/conda/lib/python3.11/site-packages (from rich>=10.11.0->typer<1.0,>=0.12->gradio) (2.19.1)\n",
       "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /opt/conda/lib/python3.11/site-packages (from sympy>=1.13.3->torch>=2.0->transformers[torch]) (1.3.0)\n",
+      "Requirement already satisfied: mdurl~=0.1 in /opt/conda/lib/python3.11/site-packages (from markdown-it-py>=2.2.0->rich>=10.11.0->typer<1.0,>=0.12->gradio) (0.1.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -114,7 +145,7 @@
    "source": [
     "%pip install -q --no-cache-dir --force-reinstall airavata-python-sdk[notebook]\n",
     "import airavata_jupyter_magic\n",
-    "%pip install 'transformers[torch]' streamlit matplotlib"
+    "%pip install 'transformers[torch]' streamlit matplotlib gradio"
    ]
   },
   {
@@ -189,6 +220,7 @@
       "- transformers\n",
       "- torch\n",
       "- matplotlib\n",
+      "- gradio\n",
       "queue: cloud\n",
       "remoteCluster: NeuroData25VC1\n",
       "wallTime: 60\n",
@@ -206,8 +238,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c6badcb4",
+   "execution_count": 9,
+   "id": "1096443d-b730-4d11-b15b-caf3cef497ef",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -220,7 +252,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[2K\u001b[32m⠦\u001b[0m Connecting to=hpc_cpu... status=CONNECTEDWORKSPACE\n",
+      "\u001b[2K\u001b[32m⠸\u001b[0m Connecting to=hpc_cpu... status=CONNECTED\n",
       "\u001b[1A\u001b[2K\u001b[2J\u001b[H"
      ]
     },
@@ -252,51 +284,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Label: NEGATIVE\n",
-      "Confidence: 0.9471\n",
-      "Inference time: 0.83 seconds\n"
+      "* Running on local URL:  http://127.0.0.1:7864\n",
+      "* Running on public URL: https://f9501205bfd0ea0b44.gradio.live\n",
+      "\n",
+      "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"https://f9501205bfd0ea0b44.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
     "import time\n",
+    "import gradio as gr\n",
     "from transformers import pipeline, AutoTokenizer, AutoModelForSequenceClassification\n",
     "\n",
-    "\n",
-    "start = time.time()\n",
-    "# Get input text from command-line argument\n",
-    "\n",
-    "# VVVVV CHANGE TEXT HERE VVVVV\n",
-    "user_input = \"The protagonist faced internal conflict.\"\n",
-    "# ^^^^^^ CHANGE TEXT HERE ^^^^^\n",
-    "\n",
-    "# Load model and tokenizer\n",
+    "# Load model and tokenizer once at startup\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"distilbert-base-uncased-finetuned-sst-2-english\")\n",
     "model = AutoModelForSequenceClassification.from_pretrained(\"distilbert-base-uncased-finetuned-sst-2-english\", trust_remote_code=True)\n",
     "classifier = pipeline(\"text-classification\", model=model, tokenizer=tokenizer)\n",
     "\n",
-    "# Run classification\n",
-    "result = classifier(user_input)[0]\n",
+    "def classify_text(user_input):\n",
+    "    start = time.time()\n",
+    "    result = classifier(user_input)[0]\n",
+    "    end = time.time()\n",
+    "    inference_time = end - start\n",
+    "    label = result['label']\n",
+    "    confidence = f\"{result['score']:.4f}\"\n",
+    "    inference_time_str = f\"{inference_time:.2f}\"\n",
+    "    return label, confidence, inference_time_str\n",
     "\n",
-    "# Print result to stdout\n",
-    "print(f\"Label: {result['label']}\")\n",
-    "print(f\"Confidence: {result['score']:.4f}\")\n",
-    "end = time.time()\n",
-    "print(f\"Inference time: {end - start:.2f} seconds\")"
+    "# Create Gradio interface\n",
+    "iface = gr.Interface(\n",
+    "    fn=classify_text,\n",
+    "    inputs=gr.Textbox(lines=2, placeholder=\"Enter SAT text to classify...\"),\n",
+    "    outputs=[\n",
+    "        gr.Textbox(label=\"Prediction Label\"),\n",
+    "        gr.Textbox(label=\"Confidence Score\"),\n",
+    "        gr.Textbox(label=\"Inference Time (seconds)\")\n",
+    "    ],\n",
+    "    title=\"SAT Text Sentiment Classifier\",\n",
+    "    description=\"Enter a SAT sentence to predict its sentiment (positive/negative) using DistilBERT fine-tuned on SST-2.\"\n",
+    ")\n",
+    "\n",
+    "iface.launch(share=True)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1096443d-b730-4d11-b15b-caf3cef497ef",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "id": "c2c5c048-5313-4b32-b89e-fb60aa3532e6",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
